--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.2.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "metro-react-native-babel-preset": "^0.59.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.15.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-date-picker": "^3.2.10",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-dotenv": "^2.5.3",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.2",
+    "react-native-modal-datetime-picker": "^9.2.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
@@ -30,7 +39,8 @@
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
     "react-navigation-stack": "^2.10.3",
-    "react-navigation-tabs": "^2.11.0"
+    "react-navigation-tabs": "^2.11.0",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
