--- a/package.json
+++ b/package.json
@@ -8,40 +8,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/drawer": "^5.12.4",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
-    "axios": "^0.21.1",
-    "expo": "~40.0.0",
-    "expo-app-loading": "^1.0.1",
-    "expo-font": "~8.4.0",
-    "expo-status-bar": "~1.0.3",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "1.6.0",
+    "expo": "~49.0.21",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "moment": "^2.29.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hook-form": "^6.15.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-native": "0.72.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^2.5.3",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.2.0",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^4.7.2",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4",
-    "react-navigation-drawer": "^2.7.0",
-    "react-navigation-stack": "^2.10.3",
-    "react-navigation-tabs": "^2.11.0"
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.10",
+    "react-navigation": "^5.0.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
